--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,18 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
     <h1>hello</h1>
+    <textarea id="txt-input" placeholder="Put hte sentance which you want to be translated"></textarea>
+
+    <button id="btn-translate">Translate</button>
+
+    <div> <h3>output will be here</h3></div>
+    <div id="output"></div>
+
 
     <script src="script.js" type="text/javascript"></script>
 </body>
+
 </html>
