--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banana speak</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
-
 <body>
-    <h1>hello</h1>
-    <textarea id="txt-input" placeholder="Put hte sentance which you want to be translated"></textarea>
 
+    
+    <h1> talk bananaaaa</h1>
+    <textarea id="txt-input"
+        placeholder="put your sentence in English here and we will convert it to banana"></textarea>
     <button id="btn-translate">Translate</button>
 
-    <div> <h3>output will be here</h3></div>
+    <div style="font-size: larger;"> Output will come here 👇</div>
     <div id="output"></div>
+    
 
 
-    <script src="script.js" type="text/javascript"></script>
+    <script src="script.js" type=""></script>
+
+
+
 </body>
-
 </html>
