--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-    
+
     <h1> talk bananaaaa</h1>
     <textarea id="txt-input"
         placeholder="put your sentence in English here and we will convert it to banana"></textarea>
     <button id="btn-translate">Translate</button>
 
-    <div style="font-size: larger;"> Output will come here 👇</div>
+    <div style="font-size: larger;"> Output will come here</div>
     <div id="output"></div>
     
 
